rewrite server fix scripts